Fixed extra space

--- a/client/src/components/Hamburger/Hamburger.css
+++ b/client/src/components/Hamburger/Hamburger.css
@@ -8,7 +8,7 @@
   height: 50px;
   cursor: pointer;
   transition: all 0.5s ease-in-out;
-  left: 94vw;
+  left: 95%;
   top: 10px;
   z-index: 990;
 }
@@ -101,5 +101,21 @@
   }
   .menu-btn__burger::after {
     transform: translateY(25px);
+  }
+}
+@media (max-width: 800px) {
+  .menu-btn {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 80px; */
+    /* width: 100%; */
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    left: 90%;
+    top: 10px;
+    z-index: 990;
   }
 }
